[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dskity"
version = "0.1.0"
description = "Modular Application (Plugin System) API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]

[project.scripts]
dskity = "dskity.__main__:main"

[project.entry-points.pytest11]
dskity = "dskity.pytest_plugin"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "paho-mqtt>=2.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dskity*"]
exclude = ["dskity.tests*"]
